...
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sleep_night" />

            <Button
                android:id="@+id/night_sleep"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="left|center_vertical"
...
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sleep_nap" />

            <Button
                android:id="@+id/day_sleep"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="left|center_vertical"
...
