...
                    android:fontFamily="sans-serif"
                    android:text="@string/str_Night_sleep"
                    android:textColor="@color/text_primary_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/night_sleep_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="right"
                    android:text="Total 1 hrs 15 min"
                    android:textColor="@color/text_secondary_dark"
...
                    android:fontFamily="sans-serif"
                    android:text="@string/str_Day_sleep"
                    android:textColor="@color/text_primary_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/day_sleep_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="right"
                    android:text="Total 1 hrs 15 min"
                    android:textColor="@color/text_secondary_dark"
...
